--- a/index.html
+++ b/index.html
@@ -647,6 +647,7 @@ layer.on('click', function () {
 for (const l of nameToLayers[name] || []) {
   const sid = String(l.feature.id);
   const s = segmentStateMap.get(sid);
+  if (!s) continue;
   if (!s?.correct && !s?.used_hint) {
     l.setStyle({ color: '#00ccff', weight: 8 });
   }
