--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ if (segmentStateMap.has(id)) {
     layer._originalColor = 'orangeish';
 
   } else if (state.correct) {
-    layer.setStyle({ color: '#00ff5566', weight: 6 }); // translucent green
+    layer.setStyle({ color: '#00994466', weight: 6 }); // darker translucent green
     setTimeout(() => {
       if (layer._path) {
         layer._path.style.opacity = '';
