--- a/index.html
+++ b/index.html
@@ -917,68 +917,47 @@ if (currentUserId) {
 }
 
 };
-document.getElementById('give-up').onclick = async function () {
+document.getElementById('give-up-btn').onclick = async function () {
   if (!currentRoad) return;
 
   const correctName = currentRoad.name.trim();
   const normalizedCorrect = normalizeName(correctName);
-  const normalizedKey = Object.keys(roadNameToIds).find(
-    k => normalizeName(k) === normalizedCorrect
-  );
+  const normalizedKey = Object.keys(roadNameToIds).find(k => normalizeName(k) === normalizedCorrect);
   const segmentIds = roadNameToIds[normalizedKey];
+  const layers = nameToLayers[normalizedKey] || [];
 
-  // Update global attempts (road-based)
-  const prevAttempts = roadAttemptsMap.get(normalizedCorrect) || 0;
-  const newAttempts = prevAttempts + 1;
-  roadAttemptsMap.set(normalizedCorrect, newAttempts);
-
-  // Also update segment-based attempt count (matches submit logic)
-  if (!attemptCounts[currentRoad.id]) {
-    attemptCounts[currentRoad.id] = 1;
-  } else {
-    attemptCounts[currentRoad.id] += 1;
-  }
+  attemptCounts[currentRoad.id] = (attemptCounts[currentRoad.id] || 0) + 1;
 
   let usedHint = false;
 
-  if (newAttempts >= 4) {
-    // FINAL GIVE-UP (4th+ try)
+  if (attemptCounts[currentRoad.id] >= 4) {
+    // FINAL give-up with hint (orange dissolve)
     usedHint = true;
-    completedRoads.add(normalizedCorrect);
-    currentRoad.hintGiven = true;
 
-    // Update internal state map before saving
+    for (const layer of layers) {
+      layer.setStyle({ weight: 6 });
+      layer._originalColor = 'orange';
+      setTimeout(() => {
+        if (layer._path) {
+          layer._path.style.opacity = '';
+          layer._path.classList.add('hint-used-final');
+        }
+      }, 0);
+    }
+
+    if (currentUserId) {
+      await saveGuessSegmentIds(segmentIds, false, true);
+    } else {
+      savePreLoginGuess({ segmentIds, isCorrect: false, usedHint: true });
+    }
+
     for (const id of segmentIds) {
       segmentStateMap.set(String(id), { correct: false, used_hint: true });
     }
 
-    for (const layer of nameToLayers[normalizedKey] || []) {
-      layer.setStyle({ color: 'orange', weight: 6 });
-      layer._originalColor = 'orange';
-    }
-
-    await saveGuessSegmentIds(segmentIds, false, true);
-
     document.getElementById('feedback-message').innerText = `Correct answer: ${correctName}`;
 
     setTimeout(() => {
-      if (activeRoadName && nameToLayers[activeRoadName]) {
-        for (const l of nameToLayers[activeRoadName]) {
-          const id = String(l.feature.id);
-          const state = segmentStateMap.get(id);
-         if (s?.correct) {
-            l._path?.classList.add('correct-final');
-          } else if (s?.used_hint) {
-            l._path?.classList.add('hint-used-final');
-          } else if (s?.incorrect) {
-            l.setStyle({ color: 'red', weight: 6 });
-          } else {
-            l.setStyle({ color: 'black', weight: 6 });
-          }
-        }
-        activeRoadName = null;
-      }
-
       document.getElementById('guess-modal').style.display = 'none';
       document.getElementById('feedback-message').innerText = '';
       window.scrollTo({ top: 0, behavior: 'smooth' });
@@ -986,35 +965,19 @@ document.getElementById('give-up').onclick = async function () {
     }, 2000);
 
   } else {
-    // EARLY GIVE-UP (< 4 tries)
-    usedHint = false;
+    // EARLY give-up: animate red segments and close modal instantly
+    animateIncorrectSegments(layers);
 
-    animateIncorrectSegments(nameToLayers[normalizedKey] || []);
-
-    await saveGuessSegmentIds(segmentIds, false, false);
+    if (currentUserId) {
+      await saveGuessSegmentIds(segmentIds, false, false);
+    } else {
+      savePreLoginGuess({ segmentIds, isCorrect: false, usedHint: false });
+    }
 
     for (const id of segmentIds) {
       segmentStateMap.set(String(id), { correct: false, used_hint: false, incorrect: true });
     }
 
-    if (activeRoadName && nameToLayers[activeRoadName]) {
-      for (const l of nameToLayers[activeRoadName]) {
-        const id = String(l.feature.id);
-        const state = segmentStateMap.get(id);
-        if (s?.correct) {
-          l._path?.classList.add('correct-final');
-        } else if (s?.used_hint) {
-          l._path?.classList.add('hint-used-final');
-        } else if (s?.incorrect) {
-          l.setStyle({ color: 'red', weight: 6 });
-        } else {
-          l.setStyle({ color: 'black', weight: 6 });
-        }
-      }
-      activeRoadName = null;
-    }
-
-    // Close modal immediately
     document.getElementById('guess-modal').style.display = 'none';
     document.getElementById('feedback-message').innerText = '';
     window.scrollTo({ top: 0, behavior: 'smooth' });
