--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@ layer.on('mouseout', function () {
 layer.on('click', function () {
   if (!insideLancaster) return; // 🔒 prevent guessing until polygon clicked
   const state = segmentStateMap.get(id);
-  if (state?.correct || state?.used_hint) return;
+  if (state?.correct) return;
 
   if (activeRoadName && nameToLayers[activeRoadName]) {
   for (const l of nameToLayers[activeRoadName]) {
