--- a/index.html
+++ b/index.html
@@ -621,6 +621,7 @@ layer.on('click', function () {
   if (!insideLancaster) return; // 🔒 prevent guessing until polygon clicked
   const state = segmentStateMap.get(id);
   if (state?.correct) return;
+  if (!layer || !layer.setStyle) return;
 
   if (activeRoadName && nameToLayers[activeRoadName]) {
   for (const l of nameToLayers[activeRoadName]) {
