--- a/index.html
+++ b/index.html
@@ -688,7 +688,6 @@ fetch('Boundaries_County_Lancaster_PA.geojson')
         fillColor: '#cce6ff',
         fillOpacity: 0.3
       },
-      
 
       onEachFeature: function (feature, layer) {
         layer.bindTooltip("Lancaster County", {
@@ -894,22 +893,14 @@ if (currentUserId) {
   if (usedHint && !isCorrect) {
     alert(`Correct answer: ${correctName}`);
   }
-let modalClosedEarly = false;
 
   // Show feedback
   document.getElementById('feedback-message').innerText = isCorrect ? 'Correct!' : 'Incorrect';
-  // Immediately close modal after early give-up
-document.getElementById('guess-modal').style.display = 'none';
-document.getElementById('feedback-message').innerText = '';
-currentRoad = null;
-window.scrollTo({ top: 0, behavior: 'smooth' });
-modalClosedEarly = true;
 
   // Delay hide based on color
   let hideDelay = 800;
   if (color === 'yellow') hideDelay = 5001;
 
-  if ((isCorrect || usedHint) && !modalClosedEarly) {
   if (isCorrect || usedHint) {
   setTimeout(() => {
     document.getElementById('guess-modal').style.display = 'none';
@@ -927,6 +918,7 @@ modalClosedEarly = true;
 
 };
 document.getElementById('give-up').onclick = async function () {
+document.getElementById('give-up-btn').onclick = async function () {
   if (!currentRoad) return;
 
   const correctName = currentRoad.name.trim();
@@ -934,7 +926,9 @@ document.getElementById('give-up').onclick = async function () {
   const normalizedKey = Object.keys(roadNameToIds).find(
     k => normalizeName(k) === normalizedCorrect
   );
+  const normalizedKey = Object.keys(roadNameToIds).find(k => normalizeName(k) === normalizedCorrect);
   const segmentIds = roadNameToIds[normalizedKey];
+  const layers = nameToLayers[normalizedKey] || [];
 
   // Update global attempts (road-based)
   const prevAttempts = roadAttemptsMap.get(normalizedCorrect) || 0;
@@ -947,11 +941,14 @@ document.getElementById('give-up').onclick = async function () {
   } else {
     attemptCounts[currentRoad.id] += 1;
   }
+  attemptCounts[currentRoad.id] = (attemptCounts[currentRoad.id] || 0) + 1;
 
   let usedHint = false;
 
   if (newAttempts >= 4) {
     // FINAL GIVE-UP (4th+ try)
+  if (attemptCounts[currentRoad.id] >= 4) {
+    // FINAL give-up with hint (orange dissolve)
     usedHint = true;
     completedRoads.add(normalizedCorrect);
     currentRoad.hintGiven = true;
@@ -959,14 +956,30 @@ document.getElementById('give-up').onclick = async function () {
     // Update internal state map before saving
     for (const id of segmentIds) {
       segmentStateMap.set(String(id), { correct: false, used_hint: true });
+    for (const layer of layers) {
+      layer.setStyle({ weight: 6 });
+      layer._originalColor = 'orange';
+      setTimeout(() => {
+        if (layer._path) {
+          layer._path.style.opacity = '';
+          layer._path.classList.add('hint-used-final');
+        }
+      }, 0);
     }
 
     for (const layer of nameToLayers[normalizedKey] || []) {
       layer.setStyle({ color: 'orange', weight: 6 });
       layer._originalColor = 'orange';
+    if (currentUserId) {
+      await saveGuessSegmentIds(segmentIds, false, true);
+    } else {
+      savePreLoginGuess({ segmentIds, isCorrect: false, usedHint: true });
     }
 
     await saveGuessSegmentIds(segmentIds, false, true);
+    for (const id of segmentIds) {
+      segmentStateMap.set(String(id), { correct: false, used_hint: true });
+    }
 
     document.getElementById('feedback-message').innerText = `Correct answer: ${correctName}`;
 
@@ -999,8 +1012,15 @@ document.getElementById('give-up').onclick = async function () {
     usedHint = false;
 
     animateIncorrectSegments(nameToLayers[normalizedKey] || []);
+    // EARLY give-up: animate red segments and close modal instantly
+    animateIncorrectSegments(layers);
 
     await saveGuessSegmentIds(segmentIds, false, false);
+    if (currentUserId) {
+      await saveGuessSegmentIds(segmentIds, false, false);
+    } else {
+      savePreLoginGuess({ segmentIds, isCorrect: false, usedHint: false });
+    }
 
     for (const id of segmentIds) {
       segmentStateMap.set(String(id), { correct: false, used_hint: false, incorrect: true });
