--- a/index.html
+++ b/index.html
@@ -493,6 +493,20 @@ async function saveGuessSegmentIds(segmentIds, isCorrect, usedHint = false) {
   }
 }
 
+  function animateIncorrectSegments(layers) {
+  layers.forEach((layer, index) => {
+    setTimeout(() => {
+      layer.setStyle({
+        color: 'red',
+        weight: 6,
+        opacity: 1,
+        lineCap: 'round'
+      });
+      layer._originalColor = 'red';
+    }, index * 50); // stagger animation for visual effect
+  });
+}
+
 
 function applyColorToAllSegments(name, color) {
   if (!nameToLayers[name]) return;
