--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ layer.on('mouseover', function () {
 
   for (const l of matchingLayers) {
     const currentColor = l._originalColor;
-    if (!['greenish', 'orangeish'].includes(currentColor)) {
+    if (['black', 'red', 'yellow'].includes(currentColor)) {
       l.setStyle({
         color: '#ffd700', // gold
         weight: 8,
@@ -603,7 +603,7 @@ layer.on('mouseout', function () {
   const currentColor = l._originalColor;
 
   // Only reset style for hoverable colors
-  if (!['greenish', 'orangeish'].includes(currentColor)) {
+  if (['black', 'red', 'yellow'].includes(currentColor)) {
     l.setStyle({
       color: currentColor,
       weight: 6,
