--- a/index.html
+++ b/index.html
@@ -838,21 +838,17 @@ if (!attemptCounts[currentRoad.id]) {
   attemptCounts[currentRoad.id] += 1;
 }
 
-// If 4th attempt or more, trigger hint
 if (attemptCounts[currentRoad.id] >= 4 && !currentRoad.hintGiven) {
   currentRoad.hintGiven = true;
   const firstLetter = correctName.charAt(0).toUpperCase();
   document.getElementById('feedback-message').innerText = `Hint: Road begins with '${firstLetter}'`;
 
-// Keep modal open — do not allow guess to proceed
-currentRoad = null;
-activeRoadName = null;
-document.getElementById('guess-input').value = '';
-document.getElementById('guess-input').focus();
-return;
+  // Keep modal open
+  document.getElementById('guess-input').value = '';
+  document.getElementById('guess-input').focus();
 
-
-
+  return;
+}
 
   // If hint was given, flag it
   if (currentRoad.hintGiven) {
